# langchain-course

./: .env.example  .gitignore  README.md  caching.ipynb  langchain-basico.ipynb  pyproject.toml
sessao-10/: langgraph - basico.ipynb  langgraph - decisão.ipynb
sessao-3/: agent.ipynb  chains.ipynb  react.ipynb  templates.ipynb  tools.ipynb
sessao-4/: embeddings.ipynb
sessao-5/: README.md  app.py  constants.py  llm.py  settings.py  template.py
sessao-6/: pinecone.ipynb
sessao-7/: rag.ipynb
