[project]
name = "langchain-course"
version = "0.1.0"
description = ""
authors = [
    {name = "RWallan",email = "3am.richardwallan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "notebook (>=7.4.2,<8.0.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
